deployments/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cilikube
  labels:
    app.kubernetes.io/name: cilikube
