deployments/kubernetes/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: cilikube-backend
  namespace: cilikube
  labels:
    app.kubernetes.io/name: cilikube
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cilikube
    app.kubernetes.io/component: backend
  ports:
    - name: http
      port: 8080
      targetPort: http
