deployments/kubernetes/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: cilikube-frontend
  namespace: cilikube
  labels:
    app.kubernetes.io/name: cilikube
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cilikube
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
